// Copyright (c) 2018 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";
package triepb;

message branchPb {
    uint32 index = 1;
    bytes childHash = 2;
}

message branchNodePb {
    repeated branchPb branches = 1;
}

message leafNodePb {
    bytes key = 1;
    bytes value = 2;
}

message extendNodePb {
    bytes path = 1;
    bytes childHash = 2;
}

message nodePb {
    oneof node {
        branchNodePb branch = 1;
        leafNodePb leaf = 2;
        extendNodePb extend = 3;
    }
}
